[workspace]
members = [
  "prqlc/bindings/elixir/native/prql",
  "prqlc/bindings/java",
  "prqlc/bindings/js",
  "prqlc/bindings/prqlc-c",
  "prqlc/bindings/prqlc-python",
  "prqlc/prqlc-macros",
  "prqlc/prqlc-parser",
  "prqlc/prqlc",
  "prqlc/prqlc/examples/compile-files", # An example
  "web/book",
]
resolver = "3"

[workspace.package]
authors = ["PRQL Developers"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PRQL/prql"
# This isn't tested since `cargo-msrv` doesn't support workspaces; instead we
# test `metadata.msrv` in `prqlc`
rust-version = "1.84.0"
version = "0.13.5"

[profile.release]
lto = true
# Optimize for binary size in releases of all crates,
# since compiler is fast enough as it is (for now).
opt-level = "s"

[profile.release.package.prqlc-c]
# Remove some debug symbols (linker needs some of them)
strip = "debuginfo"

# Insta runs faster this way, ref https://insta.rs/docs/quickstart/
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3

[workspace.metadata.release]
allow-branch = ["*"]
consolidate-commits = true

[workspace.dependencies]
anyhow = "1.0.100"
arrow = { version = "53", features = [
  "pyarrow",
  "prettyprint",
], default-features = false }
enum-as-inner = "0.6.1"
insta = { version = "1.43.2", features = ["colors", "glob", "yaml", "filters"] }
insta-cmd = "0.6.0"
itertools = "0.14.0"
log = "0.4.28"
pyo3 = { version = "0.24.1", features = ["abi3-py37", "anyhow"] }
pyo3-build-config = "0.24.1"
schemars = "1.0.4"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = { version = "0.9.34" }
similar = "2.7.0"
similar-asserts = "1.7.0"
strum = { version = "0.27.2", features = ["std", "derive"] }
strum_macros = "0.27.2"
