[package]
edition = "2021"
license = "Apache-2.0"
name = "mdbook-prql"
publish = false
repository = "https://github.com/prql/prql"
rust-version = "1.59.0"
version.workspace = true

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.2.3", default-features = false}
globset = "0.4.8"
itertools = "0.10.3"
mdbook = {version = "0.4.21", default-features = false}
mdbook-preprocessor-boilerplate = "0.1.1"
prql-compiler = {path = "../prql-compiler"}
pulldown-cmark = "0.9.1"
pulldown-cmark-to-cmark = "10.0.1"
semver = "1.0.9"
serde_json = "1.0.81"
similar = "2.2.0"
walkdir = "2.3.2"

[dev-dependencies]
globset = "0.4.8"
insta = {version = "1.21.0", features = ["colors", "glob"]}
log = "0.4.17"
pulldown-cmark = "0.9.1"
pulldown-cmark-to-cmark = "10.0.1"
similar = "2.2.0"
walkdir = "2.3.2"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
trash = "2.1.3"

[package.metadata.release]
shared-version = true
tag-name = "{{version}}"
tag-prefix = ""
