[package]
description = "PRQL is a modern language for transforming data — a simple, powerful, pipelined SQL replacement."
name = "prql-compiler"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# Manually updated to match the version in the root `Cargo.toml`, until
# https://github.com/foresterre/cargo-msrv/issues/590 is resolved.
metadata.msrv = "1.65.0"

[dependencies]
anyhow = {version = "1.0.57", features = ["backtrace"]}
ariadne = "0.1.5"
csv = "1.2.0"
enum-as-inner = "0.5.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.0"
regex = "1.7.0"
semver = {version = "1.0.14", features = ["serde"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
sqlformat = "0.2.0"
sqlparser = {version = "0.32.0", features = ["serde"]}
strum = {version = "0.24.0", features = ["std", "derive"]}# for converting enum variants to string
strum_macros = "0.24.0"

# Chumsky issues in wasm (though we only see it when compiling on MacOS)
[target.'cfg(not(target_family="wasm"))'.dependencies]
chumsky = "0.9.2"
[target.'cfg(target_family="wasm")'.dependencies]
chumsky = {version = "0.9.2", features = ["ahash", "std"], default-features = false}

[dev-dependencies]
cfg-if = "1.0"
insta = {version = "1.28", features = ["colors", "glob", "yaml"]}

# For integration tests
[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
chrono = {version = "0.4", features = [], default-features = false}
criterion = "0.4.0"
postgres = "0.19.3"
pretty_assertions = "1.3.0"
rusqlite = {version = "0.28.0", features = ["bundled", "csvtab"]}

# Re-enable on windows when duckdb supports it
# https://github.com/wangfenjin/duckdb-rs/issues/62
[target.'cfg(not(any(target_family = "windows", target_family="wasm")))'.dev-dependencies]
duckdb = {version = "0.7.0", features = ["bundled", "chrono"]}

[[bench]]
harness = false
name = "bench"

# Putting this in the workspace root causes it to refer to the path relative
# to `prql-compiler`? We can place it there when that's fixed.
[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../book/src/language-features/target.md"
replace = 'prql version:"{{version}}"'
search = 'prql version:"[\d.]+"'
