[package]
description = "PRQL is a modern language for transforming data — a simple, powerful, pipelined SQL replacement."
name = "prql-compiler"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

metadata.msrv = "1.65.0"

[dependencies]
anyhow = {version = "1.0.57", features = ["backtrace"]}
ariadne = "0.3.0"
csv = "1.2.0"
enum-as-inner = "0.6.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.18.0"
regex = "1.8.1"
semver = {version = "1.0.14", features = ["serde"]}
# We could put `serde` behind a feature if needed, particularly `yaml`, which
# isn't used in the main library.
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
serde_yaml = "0.9"
sqlformat = "0.2.0"
sqlparser = {version = "0.34.0", features = ["serde"]}
strum = {version = "0.24.0", features = ["std", "derive"]}
strum_macros = "0.24.0"

# Chumsky's default features have issues when running in wasm (though we only
# see it when compiling on MacOS), so we only include features when running
# outside wasm.
[target.'cfg(not(target_family="wasm"))'.dependencies]
chumsky = "0.9.2"
[target.'cfg(target_family="wasm")'.dependencies]
chumsky = {version = "0.9.2", features = ["ahash", "std"], default-features = false}

[dev-dependencies]
cfg-if = "1.0"
insta = {version = "1.29", features = ["colors", "glob", "yaml"]}

# For integration tests
[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
chrono = {version = "0.4", features = [], default-features = false}
criterion = "0.5.1"
csv = "1.2"
duckdb = {version = "0.7.0", features = ["bundled", "chrono"]}
mysql = "24"
pg_bigdecimal = "0.1"
postgres = "0.19"
pretty_assertions = "1.3.0"
rusqlite = {version = "0.29.0", features = ["bundled", "csvtab"]}
tiberius = {version = "0.12", features = ["sql-browser-tokio", "bigdecimal", "time"]}
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.7", features = ["compat"]}

[[bench]]
harness = false
name = "bench"

# Putting this in the workspace root causes it to refer to the path relative
# to `prql-compiler`, so we choose this crate out of default.

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../web/book/src/language-features/target.md"
replace = 'prql version:"{{version}}"'
search = 'prql version:"[\d.]+"'

# Replace the cache key, since the caches seem to accumulate cruft over time;
# ref https://github.com/PRQL/prql/pull/2407 (and there's no GHA variable that
# contains the current version unfortunately).
[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../.github/workflows/build-web.yaml"
replace = 'prefix-key: {{version}}'
search = 'prefix-key: [\d.]+'

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../.github/workflows/test-rust.yaml"
replace = 'prefix-key: {{version}}'
search = 'prefix-key: [\d.]+'

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../.github/actions/time-compilation/action.yaml"
replace = 'prefix-key: {{version}}'
search = 'prefix-key: [\d.]+'

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../.github/workflows/test-taskfile.yaml"
replace = 'prefix-key: {{version}}'
search = 'prefix-key: [\d.]+'

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../.github/workflows/test-lib.yaml"
replace = 'prefix-key: {{version}}'
search = 'prefix-key: [\d.]+'

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../.github/actions/build-prql-python/action.yaml"
replace = 'prefix-key: {{version}}'
search = 'prefix-key: [\d.]+'

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../.github/actions/build-prqlc/action.yaml"
replace = 'prefix-key: {{version}}'
search = 'prefix-key: [\d.]+'

[features]
test-external-dbs = []
