[package]
edition = "2021"
name = "prql-java"
publish = false
version = "0.2.9"

[lib]
crate_type = ["cdylib"]
doctest = false
test = false

[dependencies]
jni = "0.20.0"
prql-compiler = {path = "../prql-compiler"}

[package.metadata.release]
shared-version = true
tag-name = "{{version}}"
tag-prefix = ""
