[package]
description = "Javascript bindings for prql-compiler"
edition = "2018"
license = "Apache-2.0"
name = "prql-js"
publish = false
repository = "https://github.com/prql/prql"
version = "0.2.6"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
prql-compiler = {path = "../prql-compiler"}
wasm-bindgen = "0.2.80"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.7", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4.5", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[package.metadata.release]
shared-version = true
tag-name = "{{version}}"
tag-prefix = ""

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "package.json"
replace = '  "version": "{{version}}"'
search = '  "version": "(\d+\.\d+\.\d+)"'
