[package]
description = "Javascript bindings for prql-compiler"
name = "prql-js"
publish = false

edition.workspace = true
rust-version.workspace = true
version.workspace = true

# Unsupported by `wasm-pack` (which seems kinda unmaintained now...)
# license.workspace = true
# repository.workspace = true
license = "Apache-2.0"
repository = "https://github.com/PRQL/prql"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
prql-compiler = {path = "../prql-compiler", default-features = false}
wasm-bindgen = "0.2.80"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.7", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[package.metadata.release]
tag-name = "{{version}}"
tag-prefix = ""

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "package.json"
replace = '  "version": "{{version}}"'
search = '  "version": "(\d+\.\d+\.\d+)"'

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../playground/package-lock.json"
replace = '''    "../prql-js": {
      "version": "{{version}}"'''
search = '    "../prql-js": \{\n      "version": "[\d\.]+"'
