[package]
edition = "2021"
name = "prql-lib"
publish = false
version = "0.2.7"

[lib]
crate_type = ["staticlib", "cdylib"]
doctest = false
test = false

[dependencies]
libc = "0.2"
prql-compiler = {path = "../prql-compiler"}
serde_json = "1.0"

[package.metadata.release]
shared-version = true
tag-name = "{{version}}"
tag-prefix = ""
