[package]
edition = "2021"
name = "prql-macros"
publish = false
version.workspace = true

[lib]
doctest = false
proc_macro = true
test = false

[dependencies]
prql-compiler = {path = "../prql-compiler"}
syn = "1.0"

[package.metadata.release]
shared-version = true
tag-name = "{{version}}"
tag-prefix = ""
