[package]
build = "build.rs"
edition = "2021"
name = "prql-python"
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
name = "prql_python"

[target.'cfg(not(target_family="wasm"))'.dependencies]
pyo3 = {version = "0.17.0", features = ["abi3-py37"]}

[dependencies]
prql-compiler = {path = "../prql-compiler", default-features = false}

[build-dependencies]
pyo3-build-config = "0.17.0"

[package.metadata.release]
shared-version = true
tag-name = "{{version}}"
tag-prefix = ""
