[build-system]
build-backend = "maturin"
requires = ["maturin>=0.12,<0.13"]

[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
name = "prql-python"
requires-python = ">=3.7"

[tool.maturin]
# This is required because of https://github.com/PyO3/pyo3/pull/2135. Instead of
# the suggestions there to run tests with `--no-default-features`, we instead
# disable by default and then enable in the build, given that we're going to be
# testing more often than building.

# When https://github.com/PyO3/maturin/issues/325 merges, we can at least
# remove this config.

cargo-extra-args = "--features pyo3/extension-module"
