[package]
description = "prql-web is an interface for exploring PRQL in the browser."
edition = "2021"
license = "Apache-2.0"
name = "prql-web"
repository = "https://github.com/max-sixty/prql"
rust-version = "1.58.0"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
prql = {path = "../prql"}

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = {version = "0.1.1"}
gloo-console = {version = "0.2.0"}
gloo-events = "0.1.1"
log = "0.4.6"
# Temporarily while we wait for https://github.com/siku2/rust-monaco/pull/21
# monaco = {version = "0.3.0", features = ["yew-components"]}
monaco = {git = "https://github.com/max-sixty/rust-monaco", branch = "options", features = ["yew-components"]}
wasm-bindgen = {version = "0.2"}
wasm-logger = "0.2.0"
web-sys = "0.3.56"
wee_alloc = {version = "^0.4.2"}
yew = {version = "0.19.0"}
yew-layout = "0.7.3"

[dev-dependencies]
insta = "^1.13"
similar = "^2.1"
wasm-bindgen-test = {version = "0.2"}
