[package]
description = "prql-web is an interface for exploring PRQL in the browser."
edition = "2021"
license = "Apache-2.0"
name = "prql-web"
repository = "https://github.com/prql/prql"
rust-version = "1.58.0"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
prql-compiler = {path = "../prql-compiler"}

[target.'cfg(target_family="wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
css-style = "0.14.0"
gloo-console = "0.2.1"
gloo-events = "0.1.2"
log = "0.4.16"
# On git because of https://github.com/siku2/rust-monaco/pull/21
monaco = {git = "https://github.com/siku2/rust-monaco", branch = "master", features = ["yew-components"]}
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
web-sys = "0.3.57"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.19.3"
yew-layout = "0.7.3"

[dev-dependencies]
insta = "1.14.0"
similar = "2.1.0"
wasm-bindgen-test = "0.3.30"
