[package]
edition = "2021"
license = "Apache-2.0"
name = "prql-reference"
repository = "https://github.com/prql/prql"
rust-version = "1.59.0"
version = "0.1.1"

[dependencies]
anyhow = "^1.0"
itertools = "^0.10"
prql = {path = "../prql"}

[dev-dependencies]
globset = "0.4.8"
insta = {version = "^1.13", features = ["colors", "glob"]}
pulldown-cmark = "0.9.1"
pulldown-cmark-to-cmark = "10"
similar = "^2.1"
walkdir = "2.3.2"
