[package]
name = "test-databases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
prql-compiler = {path = "../prql-compiler"}
insta = {version = "1.14.0", features = ["colors", "glob"]}
rusqlite = {version = "0.27.0", features = ["bundled", "csvtab"]}
chrono = "0.4"
duckdb = {version="0.4.0", features = ["bundled", "chrono"]}

postgres = "0.19.3"
