[package]
edition = "2021"
name = "test-databases"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
chrono = "0.4"
insta = {version = "1.14.0", features = ["colors", "glob"]}
prql-compiler = {path = "../prql-compiler"}

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
postgres = "0.19.3"
rusqlite = {version = "0.27.0", features = ["bundled", "csvtab"]}

# Re-enable on windows when duckdb supports it
[target.'cfg(not(any(target_family = "windows", target_family="wasm")))'.dev-dependencies]
duckdb = {version = "0.4.0", features = ["bundled", "chrono"]}
