[package]
description = "Javascript bindings for prql-compiler"
name = "prql-js"
publish = false

edition.workspace = true
rust-version.workspace = true
version.workspace = true

# Unsupported by `wasm-pack` (which seems kinda unmaintained now...)
# license.workspace = true
# repository.workspace = true
license = "Apache-2.0"
repository = "https://github.com/PRQL/prql"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
prql-compiler = {path = "../../prql-compiler", default-features = false}
# This was preventing the playground from working. It's possibly
# https://github.com/rustwasm/wasm-bindgen/issues/3276
# If the playground works with a later version, we can unpin this. It's likely
# related to wasm-pack. So https://github.com/PRQL/prql/issues/1836 would likely
# solve it, along with simplifying the build process.
wasm-bindgen = "=0.2.83"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.7", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[package.metadata.cargo-udeps.ignore]
development = ["wasm-bindgen-test"]

[package.metadata.release]
tag-name = "{{version}}"
tag-prefix = ""

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "package.json"
replace = '$1"{{version}}"'
search = '(  "version": )"(\d+\.\d+\.\d+)"'

[[package.metadata.release.pre-release-replacements]]
exactly = 2
file = "package-lock.json"
replace = '''
$1
$2"{{version}}"'''
search = '(\s+"prql-js",)\n(\s+"version": )"[\d\.]+"'

[[package.metadata.release.pre-release-replacements]]
exactly = 1
file = "../playground/package-lock.json"
replace = '''$1"{{version}}"'''
search = '(    "../prql-js": \{\n      "version": )"[\d\.]+"'
